# lmc-openbdf

./: .gitignore  .pre-commit-config.yaml  Makefile  output.xlsx  pyproject.toml
docs/: conf.py
openbdf/: main.py
openbdf/cli/: explain.py  open.py  save.py
openbdf/lib/: types.py
openbdf/lib/converters/: attribute_translator.py  dataframe.py
openbdf/model/: building_bill_materials_slim.py  general_info.py  lca_results_full.py  tables.py
openbdf/model/enums/: buildings.py  energy.py  geography.py  lca.py  materials.py  openbdf_enum.py  project.py
openbdf_cli/: main.py
openbdf_cli/cli/: explain.py
openbdf_cli/model/: building_bill_materials_slim.py  field_metadata.py  general_info.py
openbdf_cli/model/enums/: buildings.py  countries.py  element_classifications.py  energy.py  geography.py  lca.py  materials.py  openbdf_enum.py  project.py
test_data/: openbdf_draft.xlsx  openbdf_draft_completed.xlsx
tests/: test_commands.py
