[project]
name = "openbdf"
dynamic = ["version"]
description = "Command line interface for working with OpenBDF 2.0 files"
authors = [
	{ name = "Cyprien Lengagne", email = "cyprien.lengagne@epfl.ch" },
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
	"openpyxl>=3.1.5",
	"pandas>=2.3.3",
	"rich~=13.9.3",
	"sqlmodel>=0.0.37",
	"typer~=0.15.1",
]

[project.optional-dependencies]
dev = [
	"myst-parser>=4.0.1",
	"pre-commit~=4.0.1",
	"pytest~=8.1.1",
	"pytest-cov~=5.0.0",
	"sphinx>=8.1.3",
	"sphinx-copybutton>=0.5.2",
	"sphinx-press-theme>=0.9.1",
]
test = [
	"pytest~=8.1.1",
	"pytest-cov~=5.0.0",
]
doc = [
	"myst-parser>=4.0.1",
	"sphinx>=8.1.3",
	"sphinx-copybutton>=0.5.2",
	"sphinx-press-theme>=0.9.1",
]

[project.urls]
repository = "https://github.com/EPFL-ENAC/lmc-openbdf"

[build-system]
requires = ["setuptools>=76.0.0", "setuptools_scm[toml]>=8.2.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=openbdf --cov-report term-missing --cov-report xml --cov-report lcov:lcov.info"
testpaths = [
    "tests",
]

[tool.setuptools]
packages = ["openbdf"]

[tool.setuptools_scm]

[project.scripts]
openbdf = "openbdf.main:app"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
preview = true

[tool.codespell]
skip = 'uv.lock,docs/_static/custom.css'

[tool.uv.workspace]
members = [
    "test-model",
]
